--- a/exercise/templates/exercise/toc.html
+++ b/exercise/templates/exercise/toc.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block sidecontent %}
-{% category_points %}
+{#% category_points %#}
 
 {% plugin_renderers user instance as plugins %}
 {% for plugin in plugins %}
