--- a/exercise/templates/exercise/_user_results.html
+++ b/exercise/templates/exercise/_user_results.html
@@ -5,11 +5,11 @@
 {% if categories|length > 1 %}
 <p class="filter-categories">
   <small>{% trans "Filter view" %}:</small>
-  {% for category_summary in categories %}
-  {% if category_summary.category.status != 'hidden' %}
-  <button class="btn btn-default btn-xs" data-category="{{ category_summary.category.id }}">
+  {% for entry in categories %}
+  {% if not entry.hidden %}
+  <button class="btn btn-default btn-xs" data-category="{{ entry.id }}">
     <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
-    {{ category_summary.category.name }}
+    {{ entry.name }}
   </button>
   {% endif %}
   {% endfor %}
@@ -18,110 +18,130 @@
 
 <p id="toggle-expired" class="hide"><a href="#">{% trans "Show older assignments." %}</a></p>
 
-{% for course_module, module_summary, uncategorized_exercise_level, category_level in exercise_tree %}
-{% with open=course_module.is_open after_open=course_module.is_after_open %}
+{% for entry in toc %}
+  {% if not entry.hidden %}
+
+  {% if entry.type == 'module' %}
+    {% with open=(entry.opening_time <= now <= entry.closing_time) after_open=(entry.opening_time <= now) %}
 <div class="panel panel-primary module-panel{% if not open and after_open %} module-expired{% endif %}">
   <a class="panel-heading{% if not open %} collapsed{% endif %}"
-  role="button" href="#module{{ course_module.id }}" data-toggle="collapse"
-  aria-expanded="{% if open %}true{% else %}false{% endif %}" aria-controls="#module{{ course_module.id }}">
-  <h3 class="panel-title">
-    {% summary_points module_summary "pull-right" %}
-    {% if not open and not after_open %}
-    <span class="badge pull-right">
-      {% trans "Opens" %} {{ course_module.opening_time }}
-    </span>
-    {% endif %}
-    <span class="caret" aria-hidden="true"></span>
-    {{ course_module }}
-  </h3>
-</a>
-<div class="collapse{% if open %} in{% endif %}" id="module{{ course_module.id }}">
+    role="button" href="#module{{ entry.id }}" data-toggle="collapse"
+    aria-expanded="{% if open %}true{% else %}false{% endif %}" aria-controls="#module{{ entry.id }}">
+    <h3 class="panel-title">
+      {% summary_points entry "pull-right" %}
+      {% if not open and not after_open %}
+      <span class="badge pull-right">
+        {% trans "Opens" %} {{ entry.opening_time }}
+      </span>
+      {% endif %}
+      <span class="caret" aria-hidden="true"></span>
+      {{ entry.name }}
+    </h3>
+  </a>
+  <div class="collapse{% if open %} in{% endif %}" id="module{{ entry.id }}">
   <div class="panel-body">
     <p>
-      {{ course_module.opening_time }} &ndash; {{ course_module.closing_time }}
+      {{ entry.opening_time }} &ndash; {{ entry.closing_time }}
 
-      {% if course_module.late_submissions_allowed %}
+      {% if entry.late_allowed %}
       <br />
       <em>
-        {% blocktrans with deadline=course_module.late_submission_deadline %}
+        {% blocktrans with deadline=entry.late_time %}
         Late submission are allowed until {{ deadline }}
         {% endblocktrans %}
-        {% if course_module.get_late_submission_point_worth != 100 %}
-        {% blocktrans with percent=course_module.get_late_submission_point_worth %}
+        {% if entry.late_percent != 100 %}
+        {% blocktrans with percent=entry.late_percent %}
         but points are only worth {{ percent }}%.
         {% endblocktrans %}
         {% endif %}
       </em>
       {% endif %}
 
-      {% if course_module.status == 'ready' and course_module.points_to_pass > 0 %}
+      {% if entry.points_to_pass > 0 %}
       <br />
-      {% blocktrans with points=course_module.points_to_pass %}
+      {% blocktrans with points=entry.points_to_pass %}
       {{ points }} points required to pass the module.
       {% endblocktrans %}
       {% endif %}
     </p>
 
-    {% if course_module.status == 'maintenance' %}
+    {% if entry.maintenance %}
     <p>
       {% trans 'Unfortunately this module is currently under maintenance.' %}
     </p>
 
     {% else %}
-    {% summary_progress module_summary %}
-    {{ course_module.introduction|safe }}
+    {% summary_progress entry %}
+    {{ entry.introduction|safe }}
     {% endif %}
   </div>
-  {% if course_module.status == 'ready' %}
   <table class="table table-striped table-condensed results-table">
     <tbody>
-      {% for category, categorized_exercise_level in category_level %}
       <tr class="category-row" data-category="{{ category.id }}">
-        <td>{{ category.name }}</td>
+        <th>{% trans "Exercise" %}</th>
+        <th>{% trans "Category" %}</th>
+        <th class="col-md-2">{% trans "Points" %}</th>
         {% if is_course_staff %}
-        <td>{% trans "Course staff" %}</td>
+        <th>{% trans "Course staff" %}</th>
         {% endif %}
-        <td class="col-md-2">{% trans "Points" %}</td>
       </tr>
-      {% for exercise, exercise_summary in categorized_exercise_level %}
-      <tr data-category="{{ category.id }}">
+    {% endwith %}
+
+  {% elif entry.type == 'exercise' %}
+    {% with after_open=(entry.opening_time <= now) %}
+    {% if entry.submittable %}
+      <tr data-category="{{ entry.category_id }}">
         <td>
           {% if after_open %}
-          {% if exercise.status == 'unlisted' %}
-          <a href="{{ exercise.parent_cached|url }}#chapter-exercise-{{ exercise.order }}">{{ exercise }}</a>
+            {% if entry.parent_link %}
+          <a href="{{ entry.parent_link }}#chapter-exercise-{{ entry.order }}">{{ entry.name }}</a>
+            {% else %}
+          <a href="{{ entry.link }}">{{ entry.name }}</a>
+            {% endif %}
           {% else %}
-          <a href="{{ exercise|url }}">{{ exercise }}</a>
+          {{ entry.name }}
           {% endif %}
-          {% else %}
-          {{ exercise }}
-          {% endif %}
+        </td>
+        <td>
+          <small>{{ entry.category }}</small>
+        </td>
+        <td>
+          {% summary_points entry %}
         </td>
         {% if is_course_staff %}
         <td>
           {% if not after_open %}
-          <a class="btn btn-default btn-xs" href="{{ exercise|url }}">
+          <a class="btn btn-default btn-xs" href="{{ entry.link }}">
             <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
             {% trans "Early access" %}
           </a>
           {% endif %}
-          <a class="btn btn-default btn-xs" href="{{ exercise|url:'submission-list' }}">
+          <a class="btn btn-default btn-xs" href="{{ entry.submissions_link }}">
             <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
             {% trans "View submissions" %}
           </a>
         </td>
         {% endif %}
-        <td>
-          {% summary_points exercise_summary %}
+      </tr>
+    {% else %}
+      <tr>
+        <td colspan="4">
+          <small>{{ entry.name }}</small>
         </td>
       </tr>
-      {% endfor %}
-      {% endfor %}
+    {% endif %}
+    {% endwith %}
+  {% endif %}
+
+  {% for level in entry.close_levels %}
+  {% if level == 'm' %}
     </tbody>
   </table>
+  </div>
+</div>
   {% endif %}
-</div>
-</div>
-{% endwith %}
+  {% endfor %}
+
 {% endfor %}
 
 <script>
