--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -14,7 +14,7 @@
             {% endif %}
         </small>
     </strong></p>
-    {% summary_progress summary %}
+    {% points_progress summary %}
 </div>
 
 <div class="panel panel-primary">
