--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -75,6 +75,12 @@
 		{% trans "All results" %}
 	</a>
 </li>
+<li role="presentation" class="menu-participants">
+	<a href="{{ instance|url:'participants' }}">
+		<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+		{% trans "Participants" %}
+	</a>
+</li>
 {% if is_teacher %}
 <li role="presentation" class="menu-edit-course">
     <a href="{{ instance|url:'course-edit' }}">
