Fix category order, passed and notifications bugs

--- a/exercise/templates/exercise/_submission_list.html
+++ b/exercise/templates/exercise/_submission_list.html
@@ -8,7 +8,7 @@
     <div class="list-group">
         {% for submission in submissions %}
         <a href="{{ submission|url }}" class="list-group-item">
-            {% submission_points submission %}
+            {% points_badge submission %}
             {{ submission.exercise }}<br />
             <small class="text-nowrap">
                 {{ submission.submission_time }}
