Fix deprecated template tag

--- a/exercise/templates/exercise/submission_plain.html
+++ b/exercise/templates/exercise/submission_plain.html
@@ -53,7 +53,7 @@
 					</span>
 					{% endif %}
 				</td>
-				<td>{% submission_points submission %}</td>
+				<td>{% points_badge submission %}</td>
 				{% if submission.files.exists %}
 				<td>
 					<ul class="list-unstyled">
