--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -26,7 +26,7 @@
 </li>
 {% endfor %}
 {% block exercisebreadcrumblist %}
-<li><a href="{{ entry.link }}">{{ entry.name }}</a></li>
+<li><a href="{{ current.link }}">{{ current.name }}</a></li>
 {% endblock %}
 {% endblock %}
 
