--- a/external_services/templates/external_services/list_menu.html
+++ b/external_services/templates/external_services/list_menu.html
@@ -1,6 +1,7 @@
 {% extends "edit_course/edit_course_base.html" %}
 {% load i18n %}
 {% load course %}
+{% load external_services %}
 
 {% block edittitle %}{% trans "Menu items" %}{% endblock %}
 {% block view_tag %}edit-course,menu{% endblock %}
@@ -18,6 +19,7 @@
 		<th>{% trans "Group" %}</th>
 		<th>{% trans "Weight" %}</th>
 		<th>{% trans "Preconfigured service" %}</th>
+		<th>{% trans "Access" %}</th>
 		<th></th>
 		<th></th>
 	</tr>
@@ -43,6 +45,12 @@
 			{% endif %}
 		</td>
 		<td>
+			{% if not menu.enabled %}
+			<span class="label label-default">{% trans "Disabled" %}</span>
+			{% endif %}
+			<small>{{ menu.access|menu_access }}</small>
+		</td>
+		<td>
 			<a href="{{ menu|url:'external-services-edit-menu' }}" class="btn btn-default btn-xs">
 				<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 				{% trans 'Edit' %}
@@ -63,7 +71,7 @@
 <br />
 <p>
 	<a class="btn btn-primary btn-xs" href="{{ instance|url:'external-services-add-menu' }}">
-		<span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
 		{% trans "Add new menu item" %}
 	</a>
 </p>
