--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -87,22 +87,28 @@
 
 <li role="presentation" class="menu-participants">
 	<a href="{{ instance|url:'participants' }}">
-		<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-list" aria-hidden="true"></span>
 		{% trans "Participants" %}
 	</a>
 </li>
 
 <li role="presentation" class="menu-all-results">
 	<a href="{{ instance|url:'all-results' }}">
-		<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
 		{% trans "All results" %}
 	</a>
 </li>
 
 {% if is_teacher %}
+<li role="presentation" class="menu-edit-news">
+		<a href="{{ instance|url:'news-list' }}">
+				<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+				{% trans "Edit news" %}
+		</a>
+</li>
 <li role="presentation" class="menu-edit-course">
 		<a href="{{ instance|url:'course-edit' }}">
-				<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+				<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
 				{% trans "Edit course" %}
 		</a>
 </li>
