--- a/exercise/templates/exercise/_category_points.html
+++ b/exercise/templates/exercise/_category_points.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load course %}
 {% load exercise %}
 
 {% comment "Disabled as course total points/grade calculation is unknown." %}
@@ -15,7 +16,7 @@
 {% endcomment %}
 
 {% for entry in categories %}
-{% if not entry.hidden %}
+{% if entry|is_visible and entry.max_points > 0 %}
 <div class="well">
     <p>{{ entry.name }}</p>
     <p><strong class="h2">
