--- a/news/templates/news/user_news.html
+++ b/news/templates/news/user_news.html
@@ -1,30 +1,47 @@
 {% load i18n %}
 {% load news %}
+
+{% for item in alerts %}
+<div class="alert alert-{{ item.alert }}">
+  <h4>
+    {{ item.title|safe }}
+    {% if not item|is_published:now %}<small><span class="label label-default">{% trans "Appears" %} {{ item.publish }}</span></small>{% endif %}
+    {% if is_course_staff %}<small><span class="label label-default">{{ item.audience|news_audience }}</span></small>{% endif %}
+  </h4>
+  <p>
+    {{ item.body|safe }}
+  </p>
+</div>
+{% endfor %}
+
 {% if news %}
-<h4>{% trans "Course news" %}</h4>
-<ul class="list-unstyled">
-{% for item in news %}
-  <li>
-    {% if item.pin and item.alert %}
-    <div class="alert alert-{{ item.alert }}">
-      <h4>
-        {{ item.title|safe }}
-        {% if not item|is_published:now %}<small><span class="label label-default">{% trans "Appears" %} {{ item.publish }}</span></small>{% endif %}
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4 class="panel-title">{% trans "Course news" %}</h4>
+  </div>
+  <div class="list-group">
+    {% for item in news %}
+    <a class="list-group-item{% if item.collapsed %} collapsed{% endif %}" href="#news{{ item.id }}" data-toggle="collapse" role="button" aria-controls="news{{ item.id }}" aria-expanded="{% if item.collapsed %}false{% else %}true{% endif %}">
+      <h4 class="list-group-item-heading">
+        <span class="caret"></span>
+        {{ item.publish }} &mdash; {{ item.title|safe }}
+        {% if not item|is_published:now %}<small><span class="label label-default">{% trans "Appears later" %}</span></small>{% endif %}
         {% if is_course_staff %}<small><span class="label label-default">{{ item.audience|news_audience }}</span></small>{% endif %}
       </h4>
-      {{ item.body|safe }}
-    </div>
-    {% else %}
-    <a href="#news{{ item.id }}" data-toggle="collapse" aria-controls="#news{{ item.id }}"{% if item.open %} aria-expanded="true"{% endif %}>
-      {{ item.publish }} &mdash; {{ item.title|safe }}
-      {% if not item|is_published:now %}<span class="label label-default">{% trans "Appears later" %}</span>{% endif %}
-      {% if is_course_staff %}<span class="label label-default">{{ item.audience|news_audience }}</span>{% endif %}
+      <p class="list-group-item-text collapse{% if not item.collapsed %} in{% endif %}" id="news{{ item.id }}">
+        {{ item.body|safe }}
+      </p>
     </a>
-    <div id="news{{ item.id }}" class="collapse{% if item.open %} in{% endif %}">
-      {{ item.body|safe }}
+    {% if item.begin_more %}
+    <a class="list-group-item" href="#more-news" data-toggle="collapse" role="button" aria-controls="more-news" aria-expanded="false">
+      {% trans "Show more" %}
+    </a>
+    <div class="collapse" id="more-news">
+    {% endif %}
+    {% endfor %}
+    {% if more > 0 and news|length > more %}
     </div>
     {% endif %}
-  </li>
-{% endfor %}
-</ul>
+  </div>
+</div>
 {% endif %}
