Implement option to add visitor tracking code

--- a/templates/403.html
+++ b/templates/403.html
@@ -1,5 +1,6 @@
 {% load i18n %}
 {% load staticfiles %}
+{% load base %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -28,5 +29,6 @@
                 </div>
             </div>
         </div>
+        {% tracking_html %}
     </body>
 </html>
