--- a/templates/404.html
+++ b/templates/404.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load base %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -24,5 +25,6 @@
                 </div>
             </div>
         </div>
+        {% tracking_html %}
     </body>
 </html>
