--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
     </head>
     <body class="{% if profile %}{% if is_external_student %}external-student{% else %}internal-student{% endif %}{% endif %}" data-view-tag="{% block view_tag %}{% endblock %}">
         <div class="page-wrap">
-            <nav class="topbar navbar navbar-inverse navbar-fixed-top">
+            <nav class="topbar navbar navbar-inverse navbar-static-top">
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false">
