Implement exercise audience and http cache

--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -74,5 +74,5 @@ window.addEventListener("message", function (event) {
     }
 });
 </script>
-{{ page.head|safe }}
+{{ page.content_head|safe }}
 {% endblock %}
