Implement model answer view

--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -76,14 +76,7 @@
 				        </ul>
 					</li>
 					<li class="navbar-text">
-						{% if exercise.is_closed %}
-							{% if exercise.model_answers %}
-								{% trans "Model answer" %}
-                {% for res in exercise.get_models %}
-                <a href="{{ res.0 }}" class="file-modal" target="_blank">{{ res.1 }}</a>
-                {% endfor %}
-							{% endif %}
-						{% else %}
+						{% if not exercise.is_closed %}
 							<small>
 							{% if exercise.points_to_pass > 0 %}
 								{% blocktrans with points=exercise.points_to_pass %}{{ points }} points required to pass.{% endblocktrans %}
@@ -100,6 +93,14 @@
 						{% endif %}
 					</li>
 				</ul>
+				{% if is_course_staff or exercise.is_closed %}
+				{% if exercise.model_answers %}
+				<a class="btn btn-default btn-xs" href="{{ exercise|url:'exercise-model' }}">
+					<span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+					{% trans "Show model answer" %}
+				</a>
+				{% endif %}
+				{% endif %}
 				{% if is_course_staff %}
 				<a class="btn btn-default btn-xs" href="{{ exercise|url:'submission-list' }}">
 					<span class="glyphicon glyphicon-list" aria-hidden="true"></span>
