--- a/exercise/templates/exercise/_points_badge.html
+++ b/exercise/templates/exercise/_points_badge.html
@@ -4,6 +4,7 @@
     {{ status }}
 </span>
 {% else %}
+{% if difficulty %}<span class="difficulty">{{ difficulty }}</span>{% endif %}
 <span class="badge{% if submitted %} badge-{% if full_score %}success{% elif passed %}info{% else %}warning{% endif %}{% endif %} {{ classes }}"
         data-toggle="tooltip" data-placement="bottom"
         title="{% if passed %}{% if submitted %}{% trans 'Passed' %}{% else %}{% trans 'No submissions' %}{% endif %}{% elif missing_points %}{% blocktrans with points=required %}{{ points }} points required to pass{% endblocktrans %}{% else %}{% trans 'Required exercises are not passed' %}{% endif %}">
