Implement user tags

--- a/edit_course/templates/edit_course/edit_course_base.html
+++ b/edit_course/templates/edit_course/edit_course_base.html
@@ -41,6 +41,11 @@
                 {% trans "Menu" %}
             </a>
         </li>
+        <li role="presentation" class="menu-course-tags">
+            <a href="{{ instance|url:'course-tags' }}">
+                {% trans "Tags" %}
+            </a>
+        </li>
         <li role="presentation" class="menu-deviations">
             <a href="{{ instance|url:'deviations-list-dl' }}">
                 {% trans "Deviations" %}
