--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -17,13 +17,13 @@
 {% block content %}
 <div class="row">
     <div class="col-sm-2 hidden-xs">
-        <nav class="course-menu">
+        <nav class="course-menu" id="main-course-menu">
             <ul class="nav nav-pills nav-stacked">
                 {% include "course/_course_menu.html" %}
             </ul>
         </nav>
 
-        <div class="calendar-view">
+        <!--div class="calendar-view">
             <h4>{% trans "Calendar" %}</h4>
             <div id="study-calendar"></div>
             <p>
@@ -31,7 +31,7 @@
                     <small>{% trans "Download calendar (ics)" %}</small>
                 </a>
             </p>
-        </div>
+        </div-->
     </div>
     <div class="col-sm-10">
         {% block siblings %}{% endblock %}
