Various UI tweaks

--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -16,7 +16,7 @@
 <li role="presentation" class="menu-toc">
 	<a href="{{ instance|url:'toc' }}">
 		<span class="glyphicon glyphicon-book" aria-hidden="true"></span>
-		{% trans "Table of contents" %}
+		{% trans "Course materials" %}
 	</a>
 </li>
 <li role="presentation" class="menu-results">
