--- a/edit_course/templates/edit_course/usertag_list.html
+++ b/edit_course/templates/edit_course/usertag_list.html
@@ -14,7 +14,7 @@
 <br />
 <p>
 	<a class="btn btn-primary btn-sm" href="{{ instance|url:'course-tags-add' }}">
-		<span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
 		{% trans "Add new student tag" %}
 	</a>
 </p>
