--- a/exercise/templates/exercise/_user_last.html
+++ b/exercise/templates/exercise/_user_last.html
@@ -12,7 +12,7 @@
 {% blocktrans with name=begin.name link=begin.link toc_link=instance|url:'toc' %}
   You can start from
   <a href="{{ link }}">{{ name }}</a>
-  or the <a href="{{ toc_link }}">table of contents</a>.
+  or browse the <a href="{{ toc_link }}">course materials</a>.
 {% endblocktrans %}
 {% endif %}
 </p>
