--- a/news/templates/news/user_news.html
+++ b/news/templates/news/user_news.html
@@ -24,7 +24,7 @@
     <a class="list-group-item{% if item.collapsed %} collapsed{% endif %}" href="#news{{ item.id }}" data-toggle="collapse" role="button" aria-controls="news{{ item.id }}" aria-expanded="{% if item.collapsed %}false{% else %}true{% endif %}">
       <h4 class="list-group-item-heading">
         <span class="caret"></span>
-        {{ item.publish }} &mdash; {{ item.title|safe }}
+        {{ item.title|safe }} <small>{{ item.publish }}</small>
         {% if not item|is_published:now %}<small><span class="label label-default">{% trans "Appears later" %}</span></small>{% endif %}
         {% if is_course_staff %}<small><span class="label label-default">{{ item.audience|news_audience }}</span></small>{% endif %}
       </h4>
